--- a/src/components/css/Main.css
+++ b/src/components/css/Main.css
@@ -13,10 +13,10 @@ body{
     background: url("https://images.pexels.com/photos/1169754/pexels-photo-1169754.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-size: cover;
     filter: brightness(100%);
-    height: 300px;
+    height: 100vh;
     z-index: -1;
     width: 100%;
-   padding-bottom: 30rem;
+   padding-bottom: 5rem;
    
   }
 
@@ -55,7 +55,7 @@ body{
   
 }
 
-  @media(max-width:900px)
+  @media(max-width:600px)
   {
     .buttongrid{
         display: grid;
@@ -106,14 +106,14 @@ body{
     color: rgba(255, 255, 255, 0.904);
     font-family: "Courier New", Courier, monospace;
     text-shadow: 2px 2px 4px black;
-    padding-right:3rem ;
-    padding-left:1rem ;
-   
+    padding-right:2rem ;
+    padding-left:0rem ;
+   font-weight: 700;
   }
 
   #email{
-    margin-top: 0.3rem;
-      width:70%;
+    margin-top: 1rem;
+      width:80%;
      
   }
 
@@ -136,20 +136,20 @@ body{
     margin:0;
 }
 .background{
-    height: 280px;
+    height: 450px;
 }
 
 .para {
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding-right: 2rem;
-    padding-left:1rem;
+    padding-left:1.5rem;
 
 
   }
 
   #email{
-      width: 65%;
-      margin-right:3rem;
+      width: 75%;
+      margin-right:2rem;
   }
   }
   #resume{
@@ -229,7 +229,7 @@ body{
         color:rgb(255, 255, 255);
         background-color: rgba(255, 255, 255, 0);
         padding: 0.1rem;
-        width:8rem;
+        width:9rem;
         margin-top: 0.1rem;
         margin-bottom:0.5rem;
         height: 3rem;
@@ -250,3 +250,24 @@ body{
     .clicktitle{
       margin-bottom: 0.1rem;
     }
+
+    #dpphone{
+     
+      width: 0;
+      display: none;
+    
+
+  }
+  @media(max-width:900px){
+    #dpphone{
+      border-radius: 1000px;
+      border:solid white 2px;
+      width:40%;
+      display: inline;
+   margin-top: 2rem;
+    
+
+  }
+  }
+
+  
