--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -15,15 +15,16 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 25px;
-    text-shadow: 2px 2px rgb(176, 176, 233);
+    text-shadow: 2px 2px rgb(96, 96, 184);
    padding-bottom: 2rem;
     }
     
     /* Change the color of links on hover */
     .topnav a:hover {
-    background-color: rgba(255, 255, 255, 0.993);
-    color: rgb(0, 0, 0);
+    border: solid 2px white;
+    color: rgb(255, 255, 255);
     border-radius: 0;
+    text-shadow: 2px 2px 4px rgb(96, 96, 184);
     }
     
     /* Add a color to the active/current link */
