--- a/src/components/css/Main.css
+++ b/src/components/css/Main.css
@@ -13,7 +13,7 @@ body{
     background: url("https://images.pexels.com/photos/1169754/pexels-photo-1169754.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-size: cover;
     filter: brightness(100%);
-    height: 100vh;
+    height: 300px;;
     z-index: -1;
     width: 100%;
    padding-bottom: 5rem;
